cc: Don't apply YUV color conversion to non-YUV draw quads

Some video frames are passed as RGBA textures to the compositor. RGBA
conversion is done beforehand in various ways (for 422 textures, this
can be done in hardware at texture fetch time, for 420 textures, this
has to be done manually in the command buffer bowels).

The root problem is that, despite the fact that YUV to RGB conversion
has been applied, these textures are tagged with a YUV color space.

The full fix is to audit all of the places where TextureMailboxes are
populated by media code, and ensure that the ColorSpace attached to the
mailbox is the ColorSpace that we will get from texturing out of the
resource we create from the TextureMailbox.

For the moment, fix this regression by ensuring that no color conversion
be applied to any DrawQuads except for YUV video draw quads.

BUG=699123
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2734223002
Cr-Commit-Position: refs/heads/master@{#455265}

Former-commit-id: 7100c1b09f742260b741c1cd717b8f449e0f8eb2